Add Matplotlib assignment

--- a/Week 1/Assignment_1.ipynb
+++ b/Week 1/Assignment_1.ipynb
@@ -748,10 +748,149 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Data visualisation is a very important part of data science. It helps us understand the data better and draw conclusions from it and Matplotlib is the most popular library in python for this step.\n",
+        "\n",
+        "In this section, you'll navigate through a series of challenges that not only familiarize you with Matplotlib but also showcase the diverse array of plots and their practical applications. This will not only enhance your Matplotlib skills but also sharpen your ability to choose the right plot for the right scenario. \n",
+        "\n",
+        "So let's delve in and master the craft of transforming data into compelling visual insights. We will have start with importing the matplotlib library"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now, let's start with a simple x vs y plot. \n",
+        "1. Create 2 numpy arrays `x` and `y` of random integers, of size (5,1) \n",
+        "2. Create a plot of `x` vs `y` using the `plot()` function\n",
+        "3. Add labels to the X and Y axes \n",
+        "4. Add a title to the plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# <START>\n",
+        "\n",
+        "# <END>\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### **Bar Graphs**\n",
+        "\n",
+        "Bar graph uses bars to compare data among different categories. It is well suited when you want to measure the changes over a period of time. It can be represented horizontally or vertically. Also, the important thing to keep in mind is that longer the bar, greater is the value.\n",
+        "\n",
+        "We will be plotting a grouped bar chart in this task. More often than not, it’s more interesting to compare values across two dimensions and for that, a grouped bar chart is needed. (Although no need to worry, making a grouped chart is just calling the `.bar()` command twice :)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Create the data to be plotted\n",
+        "x1 = np.array([0.25,1.25,2.25,3.25,4.25]) #this will decide the x-coordinate of the centre of the bars\n",
+        "y1 = np.array([10,55,80,32,40])\n",
+        "width = 0.5 # width of the bars\n",
+        "x2 = x1 + width # this will shift the x-coordinate of the centre of the bars by width\n",
+        "y2 = np.array([42,26,10,29,66])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now, \n",
+        "1. Create the bar graphs. Assign different label and color to both the plots.\n",
+        "2. Create legend, title and axes labels\n",
+        "3. Play around with the values to get a sense of how everything is working"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### **Histograms**\n",
+        "\n",
+        "Histograms are used to show a distribution whereas a bar chart is used to compare different entities. Histograms are useful when you have arrays or a very long list. I have to plot the age of population with respect to bin. Now, bin refers to the range of values that are divided into series of intervals. Bins are usually created of the same size.\n",
+        "\n",
+        "For this task, you should:\n",
+        "1. Create bins of interval 10 from 0 to 100. Use `np.arange`\n",
+        "2. Generate data to be plotted. You can use numpy for this or write the data yourself. Pick atleast 30 valus.\n",
+        "3. Plot the histogram, label the axes and title the plot\n",
+        "4. Customise the color and width of the plot as per your choice"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### **Scatter plot**\n",
+        "\n",
+        "Usually we need scatter plots in order to compare variables, for example, how much one variable is affected by another variable to build a relation out of it. The data is displayed as a collection of points, each having the value of one variable which determines the position on the horizontal axis and the value of other variable determines the position on the vertical axis\n",
+        "\n",
+        "1. Create 2 sets of data, `(x1,y1)` and `(x2,y2)` with 8 values each\n",
+        "2. Create the scatter plots for both of them and give different labels to each\n",
+        "3. Stylise each plot, by giving different colors and marker style. *(Use `marker` argument)*\n",
+        "4. Provide legend"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### **Subplots**\n",
+        "\n",
+        "*Look up the `subplot()` command and it's use*\n",
+        "\n",
+        "1. Generate multiple datasets for different plots.\n",
+        "2. Create a figure with multiple subplots (e.g., a 2x2 grid).\n",
+        "3. Plot different types of charts (line, scatter, bar) in each subplot. You are free to choose any kind of data and plot."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
