--- a/Week 1/Assignment_1.ipynb
+++ b/Week 1/Assignment_1.ipynb
@@ -3,10 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://github.com/Mehul-Agrawal410/SpeakSpeare/blob/main/Week%201/Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Mehul-Agrawal410/SpeakSpeare/blob/main/Week%201/Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -20,7 +21,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Ig3HoMi7XsFL"
+      },
       "source": [
         "The following questions are designed to test your basic undersatnding of python in topics such as recursion, functions, loop and classes. DO NOT use ChatGPT for this as it is important that you understand and clarify the basics here because it won't be able to help you on later stages of this project. So it's best to discuss your doubts on the group or ask us mentors. Have fun solving this assignment :)"
       ]
@@ -37,13 +40,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "j3HKaA4IXsFN"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "obQO9ik9XsFN"
+      },
       "source": [
         "\n",
         "**Q2. Create a class called \"Car\" that inherits from a parent class called \"Vehicle\". Additionally, the \"Car\" class should have a method to calculate the fuel efficiency, a property to track the current speed, and a class variable to keep track of the total number of cars created.**"
@@ -52,13 +59,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "FM7-VeBNXsFO"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "YtiLK_6-XsFO"
+      },
       "source": [
         "**Q3. Write a function called \"reverse_string\" that takes a string as input and returns the reverse of the input string.**"
       ]
@@ -66,13 +77,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "hhJ-TMZ4XsFO"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "uApbHAIxXsFO"
+      },
       "source": [
         "**Q4. Write a program to calculate the sum of all the even numbers between 1 and 100 which are not divisible by 5 and 7 using a for-loop**"
       ]
@@ -80,13 +95,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "R4P389cjXsFO"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "c4t97kfpXsFP"
+      },
       "source": [
         "**Q5. Create a dictionary with the following key-value pairs: \"name\" - \"John\", \"age\" - 25, \"city\" - \"New York\". Write a program that prints out the keys and values of the dictionary.**"
       ]
@@ -94,13 +113,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "NUoZJxZRXsFP"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "1HVhQ2Q-XsFP"
+      },
       "source": [
         "**Q6. Write a function that takes a list of numbers as input and returns the second largest number in the list, without using any built-in sorting functions or the max() function.**"
       ]
@@ -108,7 +131,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "LQTabMTrXsFQ"
+      },
       "outputs": [],
       "source": []
     },
@@ -1072,7 +1097,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
